# finite-fields

./: LICENSE  finite-fields.cabal  stack.yaml
app/: Main.hs
src/: Check.hs  Classes.hs  F16.hs  F16a.hs  F16b.hs  F16c.hs  GenLUT.hs  PolyF2.hs  Utils.hs
