name:                finite-fields
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/finite-fields#readme
license:             BSD3
license-file:        LICENSE
Author:              Erik Rantapaa
maintainer:          example@example.com
copyright:           2016 Erik Rantapaa
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, F16, Check, Utils, Classes
  build-depends:       base >= 4.7 && < 5, polynomial, HaskellForMaths
  default-language:    Haskell2010

test-suite finite-fields-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , finite-fields
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/finite-fields
